# backend/app/schemas/user.py
@@ -34,6 +34,7 @@ class ResetPasswordRequest(BaseModel):
 
 class UserResponse(UserBase):
     id: UUID
+    is_active: bool
     created_at: datetime
 
     model_config = ConfigDict(from_attributes=True)
